--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/infou_db?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://infou-db.c1egg6qaq55v.ap-northeast-2.rds.amazonaws.com:3306/infou_db?serverTimezone=UTC&characterEncoding=UTF-8
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
